# ethzasl_msf

./: CMakeLists.txt  eth_msf.files  eth_msf.includes
build-msf_core-unknown-Default/: CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  msf_core.cbp  setup_custom_pythonpath.sh
build-msf_core-unknown-Default/atomic_configure/: local_setup.sh  setup.sh
build-msf_core-unknown-Default/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-msf_core-unknown-Default/catkin_generated/installspace/: _setup_util.py  msf_core.pc  msf_coreConfig.cmake
build-msf_core-unknown-Default/devel/: .catkin  .rosinstall
build-msf_core-unknown-Default/devel/include/msf_core/: MSF_CoreConfig.h
build-msf_core-unknown-Default/devel/lib/pkgconfig/: msf_core.pc
build-msf_core-unknown-Default/devel/share/msf_core/cmake/: msf_coreConfig.cmake
build-msf_core-unknown-Default/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
build-msf_core-unknown-Default/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
build-msf_core-unknown-Default/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
msf_core/cfg/: MSF_Core.cfg
msf_core/include/msf_core/: msf_sensormanagerROS.h  msf_types.h
msf_core/include/msf_core/implementation/: msf_core_inl.h
msf_updates/: KITTI.yaml
msf_updates/include/msf_updates/pose_sensor_handler/: pose_measurement.h.autosave
msf_updates/launch/: position_sensor.launch  viconpos_sensor.launch
